# profiteur

./: .gitignore  CHANGELOG  CHANGELOG.md  LICENSE  README.markdown  README.md  profiteur.cabal  stack.yaml
app/: Main.hs
data/css/: main.css
data/html/: body.html
data/js/: cost-centre-node.js  details.js  individual-node.js  main.js  model.js  node.js  resizing-canvas.js  selection.js  sorting.js  tree-browser.js  tree-map.js  unicode.js  zoom.js
example/: Makefile  binary-trees.hs
lib/Profiteur/: Main.hs
src/: Main.hs  Profiteur.hs
src/Profiteur/: Core.hs  Data.hs  DataType.hs  Parser.hs  Report.hs
src/Profiteur/DataFile/: Internal.hs
src/embed/Profiteur/: Data.hs  DataFile.hs
src/noembed/Profiteur/: Data.hs  DataFile.hs
