Name:                profiteur
Version:             0.4.4.0
Synopsis:            Treemap visualiser for GHC prof files
Description:         Treemap visualiser for GHC prof files
Homepage:            http://github.com/jaspervdj/profiteur
License:             BSD3
License-file:        LICENSE
Author:              Jasper Van der Jeugt <m@jaspervdj.be>
Maintainer:          Jasper Van der Jeugt <m@jaspervdj.be>
Copyright:           2014 Jasper Van der Jeugt
Category:            Development, Profiling
Build-type:          Simple
Cabal-version:       >= 1.8

Extra-source-files:
  CHANGELOG.md
  README.md

Data-files:
  data/css/main.css
  data/html/body.html
  data/js/details.js
  data/js/main.js
  data/js/model.js
  data/js/node.js
  data/js/resizing-canvas.js
  data/js/selection.js
  data/js/sorting.js
  data/js/tree-browser.js
  data/js/tree-map.js
  data/js/unicode.js
  data/js/zoom.js

Flag embed-data-files
  description: Embed data files into the executable (needed for ghcjs packaging)
  default:     False
  manual:      True

Source-repository head
  Type: git
  Location: git://github.com/jaspervdj/profiteur.git

Executable profiteur
  Main-is:        Main.hs
  Hs-source-dirs: src
  Ghc-options:    -Wall

  Other-modules:
    Profiteur.Core
    Profiteur.Parser
    Profiteur.DataFile
    Profiteur.DataFile.Internal
    Paths_profiteur

  Build-depends:
    aeson                >= 0.6  && < 1.3,
    base                 >= 4.8  && < 5,
    bytestring           >= 0.9  && < 0.11,
    containers           >= 0.5  && < 0.6,
    filepath             >= 1.3  && < 1.5,
    ghc-prof             >= 1.3  && < 1.5,
    js-jquery            >= 3.1  && < 3.3,
    scientific           >= 0.3  && < 0.4,
    text                 >= 0.11 && < 1.3,
    unordered-containers >= 0.2  && < 0.3,
    vector               >= 0.10 && < 0.13

  if flag(embed-data-files)
    Build-depends: file-embed >= 0.0.10 && < 0.0.11,
                   template-haskell >= 2.11 && < 2.12
    Hs-source-dirs: src/embed
  else
    Hs-source-dirs: src/noembed
