Name:                profiteur
Version:             0.4.6.1
Synopsis:            Treemap visualiser for GHC prof files
Description:         Treemap visualiser for GHC prof files
Homepage:            http://github.com/jaspervdj/profiteur
License:             BSD3
License-file:        LICENSE
Author:              Jasper Van der Jeugt <m@jaspervdj.be>
Maintainer:          Jasper Van der Jeugt <m@jaspervdj.be>
Copyright:           2014 Jasper Van der Jeugt
Category:            Development, Profiling
Build-type:          Simple
Cabal-version:       >= 1.10

Extra-source-files:
  CHANGELOG.md
  README.md

Data-files:
  data/css/main.css
  data/html/body.html
  data/js/details.js
  data/js/main.js
  data/js/model.js
  data/js/node.js
  data/js/resizing-canvas.js
  data/js/selection.js
  data/js/sorting.js
  data/js/tree-browser.js
  data/js/tree-map.js
  data/js/unicode.js
  data/js/zoom.js

Flag embed-data-files
  description: Embed data files into the executable (needed for ghcjs packaging)
  default:     False
  manual:      True

Source-repository head
  Type: git
  Location: git://github.com/jaspervdj/profiteur.git

Executable profiteur
  Default-language: Haskell2010
  Ghc-options:      -Wall
  Hs-source-dirs:   src
  Main-is:          Main.hs

  Other-modules:
    Profiteur.Core
    Profiteur.Parser
    Profiteur.DataFile
    Profiteur.DataFile.Internal
    Paths_profiteur

  Build-depends:
    aeson                >= 0.6  && < 2.2,
    base                 >= 4.8  && < 5,
    bytestring           >= 0.9  && < 0.12,
    containers           >= 0.5  && < 0.7,
    filepath             >= 1.3  && < 1.5,
    ghc-prof             >= 1.3  && < 1.5,
    js-jquery            >= 3.1  && < 3.4,
    scientific           >= 0.3  && < 0.4,
    text                 >= 0.11 && < 1.3,
    unordered-containers >= 0.2  && < 0.3,
    vector               >= 0.10 && < 0.13

  if flag(embed-data-files)
    Hs-source-dirs: src/embed
    Build-depends:
      file-embed       >= 0.0.10 && < 0.0.12,
      template-haskell
  else
    Hs-source-dirs: src/noembed
